--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home</title>
-<link rel="stylesheet" href="style.css">k
+<link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
 <h1>Home</h1>
