--- a/src/templates/telegram_integration.html
+++ b/src/templates/telegram_integration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TG configuration</title>
-    <link rel="stylesheet" href="telegram_integration.css">
+    <link rel="stylesheet" href="../static/telegram_integration.css">
   </head>
   <body>
     <h1>TG configuration</h1>
