--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home</title>
-<link rel="stylesheet" href="../static/style.css">
-</head>
-<body>
-<h1>Home</h1>
-{% if msg %}
-<div class="container">
-  <div class="msg">{{msg}}</div>
-</div>
-{% endif %}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" href="../static/style.css" />
+  </head>
+  <body>
+    <h1>Home</h1>
+    {% if msg %}
+    <div class="container">
+      <div class="msg">{{msg}}</div>
+    </div>
+    {% endif %}
 
-<div class="button-container">
-  <form action="/register" method="get">
-    <button class="button button-animation" type="submit">Register</button>
-  </form>
+    <div class="button-container">
+      <form action="/register" method="get">
+        <button class="button button-animation" type="submit">Register</button>
+      </form>
 
-  <form action="/login" method="get">
-    <button class="button button-animation" type="submit">Login</button>
-  </form>
-</div>
-</body>
+      <form action="/login" method="get">
+        <button class="button button-animation" type="submit">Login</button>
+      </form>
+    </div>
+  </body>
 </html>
-
