--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -17,13 +17,13 @@
     <div class="integration-container">
       <div>Older Integrations</div>
       {% if old_tg_integrations %}
-        
+
       <table border="1" rules="all">
         <thead>
           <tr>
-          <th>Configuration</th>
-          <th>Bot</th>
-          <th>Status</th>
+            <th>Configuration</th>
+            <th>Bot</th>
+            <th>Status</th>
           </tr>
         </thead>
         <tbody>
@@ -32,12 +32,12 @@
             <td>{{ integration.configuration }}</td>
             <td>{{ integration.bot_name }}</td>
             <td>
-              {% if integration.status %}
-                Active
-              {% else %}
-                <form action="/tg_activation/{{integration.configuration_id}}/{{integration.bot_token}}">
-                  <button type="Submit">Activate</button>
-                </form>
+              {% if integration.status %} Active {% else %}
+              <form
+                action="/tg_activation/{{integration.configuration_id}}/{{integration.bot_token}}"
+              >
+                <button type="Submit">Activate</button>
+              </form>
               {% endif %}
             </td>
           </tr>
@@ -45,17 +45,14 @@
         </tbody>
       </table>
 
-      {% endif %}
-      
-{% if old_wp_integrations %}
-  
-              
+      {% endif %} {% if old_wp_integrations %}
+
       <table border="1" rules="all">
         <thead>
           <tr>
-          <th>Configuration</th>
-          <th>Phone number</th>
-          <th>Get url</th>
+            <th>Configuration</th>
+            <th>Phone number</th>
+            <th>Get url</th>
           </tr>
         </thead>
         <tbody>
@@ -64,17 +61,20 @@
             <td>{{ integration.configuration }}</td>
             <td>{{ integration.phone_number }}</td>
             <td>
-                  <button id="get_wp_webhook_url" data-configuration-id="{{integration.configuration_id}}">Get</button>
+              <button
+                id="get_wp_webhook_url"
+                data-configuration-id="{{integration.configuration_id}}"
+              >
+                Get
+              </button>
             </td>
           </tr>
           <div class="integration">{{ integration.configuration }}</div>
           {% endfor %}
         </tbody>
       </table>
-      
+
       {% endif %}
-
-
 
       <form action="/new_integration" method="get" class="integration">
         <label for="configuration">New Integration:</label><br />
@@ -106,17 +106,21 @@
 
     <script>
       const get_wp_webhook_url = (configuration_id) => {
-        var baseURL = window.location.protocol + "//" + window.location.host + "/";
-        webhook_url = baseURL + "/whatsapp/" + configuration_id
+        var baseURL =
+          window.location.protocol + "//" + window.location.host + "/";
+        webhook_url = baseURL + "/whatsapp/" + configuration_id;
         alert(webhook_url);
-    };
+      };
 
-    document.getElementById("get_wp_webhook_url").addEventListener("click", function() {
-      var baseURL = window.location.protocol + "//" + window.location.host + "/";
-      var configuration_id = this.getAttribute("data-configuration-id");
-      webhook_url = baseURL + "/whatsapp/" + configuration_id
-      alert(webhook_url)
-  });
+      document
+        .getElementById("get_wp_webhook_url")
+        .addEventListener("click", function () {
+          var baseURL =
+            window.location.protocol + "//" + window.location.host + "/";
+          var configuration_id = this.getAttribute("data-configuration-id");
+          webhook_url = baseURL + "/whatsapp/" + configuration_id;
+          alert(webhook_url);
+        });
     </script>
   </body>
 </html>
