--- a/src/static/dashboard.css
+++ b/src/static/dashboard.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
-  overflow: hidden;
+  overflow:scroll;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -32,7 +32,7 @@ h1 {
 }
 
 .message {
-  background-color: #dc3545;
+  background-color: #3d72a4;
   color: #fff;
   padding: 10px 20px;
   margin: 20px auto;
