--- a/src/static/style.css
+++ b/src/static/style.css
@@ -45,6 +45,7 @@ h1 {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
+  width:135px;
   display: inline-block;
   font-size: 16px;
   margin: 10px;
